--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-# Google AI Studio API Key
-GOOGLE_API_KEY=your_google_ai_studio_api_key_here
+# Exam Explainer Bot - Environment Variables
+
+# Google AI (Gemini)
+GOOGLE_API_KEY=your_google_api_key_here
+
+# Supabase
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your_anon_key_here
